Lets try it out...

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ on:
   #- cron: "0 12 * * *"
 
   # Triggers the workflow on push or pull request events but only for the master branch
-  #push:
-    #branches: [ master, main]
+  push:
+    branches: [workflow-attempts]
   #pull_request:
     #branches: [ master, main]
     
